--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -60,12 +60,16 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IProductService" />
+        <binding name="BasicHttpBinding_ICustomerService" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:8733/Services/ProductService"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService"
         contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
+      <endpoint address="http://localhost:8733/Services/CustomerService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService"
+        contract="ServiceReference1.ICustomerService" name="BasicHttpBinding_ICustomerService" />
     </client>
   </system.serviceModel>
 </configuration>
