--- a/WebApplication.Tests/App.config
+++ b/WebApplication.Tests/App.config
@@ -11,4 +11,20 @@
     <connectionStrings>
 
     </connectionStrings>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IProductService" />
+                <binding name="BasicHttpBinding_ICustomerService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8733/Services/ProductService"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService"
+                contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
+            <endpoint address="http://localhost:8734/Services/CustomerService"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService"
+                contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
+        </client>
+    </system.serviceModel>
 </configuration>
