Name change på "serviceRef1"

--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -73,7 +73,7 @@
         contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
       <endpoint address="http://localhost:8734/Services/CustomerService"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService1"
-        contract="ServiceReference1.ICustomerService" name="BasicHttpBinding_ICustomerService1" />
+        contract="CustomerServiceReference.ICustomerService" name="BasicHttpBinding_ICustomerService1" />
     </client>
   </system.serviceModel>
 </configuration>
