--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -61,6 +61,7 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IProductService" />
         <binding name="BasicHttpBinding_ICustomerService" />
+        <binding name="BasicHttpBinding_IOrderService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -70,6 +71,9 @@
       <endpoint address="http://localhost:8734/Services/CustomerService"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService"
         contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
+      <endpoint address="http://localhost:8734/Services/OrderService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderService"
+        contract="OrderService.IOrderService" name="BasicHttpBinding_IOrderService" />
     </client>
   </system.serviceModel>
 </configuration>
