--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -127,12 +127,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Connected Services\OrderService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\ProductService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Controllers\CartController.cs" />
+    <Compile Include="Controllers\CheckOutController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -145,8 +151,10 @@
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLayer\IUseCustomerService.cs" />
+    <Compile Include="ServiceLayer\IUseOrderService.cs" />
     <Compile Include="ServiceLayer\IUseProductService.cs" />
     <Compile Include="ServiceLayer\CustomerService.cs" />
+    <Compile Include="ServiceLayer\ServiceOrder.cs" />
     <Compile Include="ServiceLayer\ServiceProduct.cs" />
     <Compile Include="Utilities\ConvertDataModel.cs" />
     <Compile Include="Utilities\IModelConvert.cs" />
@@ -162,6 +170,16 @@
     <None Include="Connected Services\CustomerService\Services.Model.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Connected Services\OrderService\service.wsdl" />
+    <None Include="Connected Services\OrderService\service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\OrderService\service1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\OrderService\Services.Model.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Connected Services\ProductService\Arrays.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -174,6 +192,12 @@
     <None Include="Connected Services\CustomerService\configuration91.svcinfo" />
     <None Include="Connected Services\CustomerService\configuration.svcinfo" />
     <None Include="Connected Services\CustomerService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\OrderService\configuration91.svcinfo" />
+    <None Include="Connected Services\OrderService\configuration.svcinfo" />
+    <None Include="Connected Services\OrderService\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -239,6 +263,7 @@
     <Content Include="Views\Cart\Test.cshtml" />
     <Content Include="Views\Cart\Delete.cshtml" />
     <Content Include="Views\Cart\Empty.cshtml" />
+    <Content Include="Views\CheckOut\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -261,6 +286,7 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\CustomerService\" />
+    <WCFMetadataStorage Include="Connected Services\OrderService\" />
     <WCFMetadataStorage Include="Connected Services\ProductService\" />
   </ItemGroup>
   <PropertyGroup>
