--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -62,6 +62,7 @@
         <binding name="BasicHttpBinding_IProductService" />
         <binding name="BasicHttpBinding_ICustomerService" />
         <binding name="BasicHttpBinding_IOrderService" />
+        <binding name="BasicHttpBinding_ICustomerService1" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -74,6 +75,9 @@
       <endpoint address="http://localhost:8734/Services/OrderService"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderService"
         contract="OrderService.IOrderService" name="BasicHttpBinding_IOrderService" />
+      <endpoint address="http://localhost:8734/Services/CustomerService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService1"
+        contract="CustomerServiceReference.ICustomerService" name="BasicHttpBinding_ICustomerService1" />
     </client>
   </system.serviceModel>
 </configuration>
