--- a/WebApplication.Tests/App.config
+++ b/WebApplication.Tests/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
     Note: Add entries to the App.config file for configuration settings
     that apply only to the Test project.
@@ -19,12 +19,24 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Services/ProductService"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService"
-                contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
-            <endpoint address="http://localhost:8734/Services/CustomerService"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService"
-                contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
+            <endpoint address="http://localhost:8733/Services/ProductService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService" contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
+            <endpoint address="http://localhost:8734/Services/CustomerService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService" contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
         </client>
     </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
