--- a/WebApplication/packages.config
+++ b/WebApplication/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="Apollo13" version="3.4.17344" targetFramework="net472" />
+  <package id="Apollo13.DataAccessLayer" version="3.4.18001" targetFramework="net472" />
+  <package id="Apollo13.Mapper" version="3.4.17344" targetFramework="net472" />
+  <package id="Apollo13.PerformanceMonitor" version="3.4.18001.2" targetFramework="net472" />
+  <package id="Apollo13.Threadworker" version="3.4.18001.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -10,8 +15,18 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="NLog" version="4.4.12" targetFramework="net472" />
+  <package id="QPick.Classlogger" version="3.4.17343" targetFramework="net472" />
+  <package id="Qpick.Enums" version="3.4.18037.1" targetFramework="net472" />
+  <package id="QPick.Methodlogger" version="3.3.17164.0" targetFramework="net472" />
+  <package id="QPick.StocklocationMask" version="3.3.17170.0" targetFramework="net472" />
+  <package id="QPick.XML" version="3.3.17170.0" targetFramework="net472" />
+  <package id="QuickPick.One" version="3.4.18143.6" targetFramework="net472" />
+  <package id="QuickPickOneCLR" version="3.4.18037.2" targetFramework="net472" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
