--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -62,10 +62,18 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8733/Services/ProductService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService" contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
-      <endpoint address="http://localhost:8734/Services/CustomerService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService" contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
-      <endpoint address="http://localhost:8734/Services/OrderService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderService" contract="OrderService.IOrderService" name="BasicHttpBinding_IOrderService" />
-      <endpoint address="http://localhost:8734/Services/CustomerService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService1" contract="CustomerServiceReference.ICustomerService" name="BasicHttpBinding_ICustomerService1" />
+      <endpoint address="http://localhost:8734/Services/CustomerService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService"
+        contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
+      <endpoint address="http://localhost:8734/Services/CustomerService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService1"
+        contract="CustomerServiceReference.ICustomerService" name="BasicHttpBinding_ICustomerService1" />
+      <endpoint address="http://localhost:8734/Services/OrderService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderService"
+        contract="OrderService.IOrderService" name="BasicHttpBinding_IOrderService" />
+      <endpoint address="http://localhost:8733/Services/ProductService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService"
+        contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
     </client>
   </system.serviceModel>
 </configuration>
