--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Models\CompanyProduct.cs" />
     <Compile Include="Models\CompanyProductVersion.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\ViewModelReciept.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLayer\IUseCustomerService.cs" />
     <Compile Include="ServiceLayer\IUseOrderService.cs" />
@@ -215,6 +216,9 @@
     <None Include="Connected Services\CustomerServiceReference\Services.Model.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Connected Services\CustomerServiceReference\WebApplication.CustomerServiceReference.Customer.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Connected Services\OrderService\service.wsdl" />
     <None Include="Connected Services\OrderService\service.xsd">
       <SubType>Designer</SubType>
@@ -348,6 +352,7 @@
     <Content Include="Views\CheckOut\Index.cshtml" />
     <Content Include="Views\CheckOut\Receipt.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\CheckOut\NoCustomerLoggedIn.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
