Expanded site layout + intergration of order test

--- a/WebApplication.Tests/WebApplication.Tests.csproj
+++ b/WebApplication.Tests/WebApplication.Tests.csproj
@@ -101,6 +101,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="ServiceCheckoutTest.cs" />
     <Compile Include="ServiceProductTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
