--- a/WebApplication.Tests/App.config
+++ b/WebApplication.Tests/App.config
@@ -16,11 +16,13 @@
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IProductService" />
                 <binding name="BasicHttpBinding_ICustomerService" />
+              <binding name="BasicHttpBinding_IOrderService" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8733/Services/ProductService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService" contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
             <endpoint address="http://localhost:8734/Services/CustomerService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService" contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
+          <endpoint address="http://localhost:8734/Services/OrderService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderService" contract="OrderService.IOrderService" name="BasicHttpBinding_IOrderService" />
         </client>
     </system.serviceModel>
   <runtime>
